--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,109 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.row-style
+{
+  padding-top:30px;
+  
+}
+
+.custom-jumbotron {
+  
+  padding: 20px;
+  border-radius: 15px; 
+}
+.light-pink-bg {
+  background-color: #f9d5e7; 
+}
+.card-title{
+  background-color: #f3e5f5;
+  padding: 10px;
+  border-radius: 15px;
+  font-size: 20px;
+  
+}
+.text-style
+{
+  float: right;
+  text-decoration:None;
+}
+
+.custom-list {
+  list-style-type: disc; /* Style the bullet points as discs */
+  padding-left: 20px; /* Adjust the indentation as needed */
+}
+.image{
+  width:100%;
+  height:350px;
+  border-radius: 25px;
+}
+.banner_content{
+  position : absolute;
+  top:50%;
+  left :50%;
+  transform: translate(-50%, -125%);
+  background-color: rgba(5, 5, 5, 0.5);
+  padding: 50px;
+  border-radius : 20px;
+  color : white;
+  
+}
+.row_img{
+  width :100%;
+  height : 300px;
+  border-radius: 50%;
+  padding-top: 20px;
+}
+
+
+
+.subnav {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.top-left {
+  position: absolute;
+  
+  left: 0;
+  gap: 20px;
+  display: flex;
+}
+
+.top-right {
+  position: absolute;
+  
+  right: 0;
+  gap: 20px;
+  display: flex; /* Ensures buttons are on the same line */
+}
+
+
+.fixed-footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #000; /* Background color for the footer */
+  color: #fff; /* Text color for the footer */
+  text-align: center;
+  padding: 10px; /* Add padding for spacing */
+  
+}
+
+.like-button {
+  margin-right: 10px; /* Adjust the value to control the space */
+  margin-left: 10px;
+}
+
+.dislike-button {
+  margin-right: 10px; /* Adjust the value to control the space */
+  margin-left: 10px;
+}
+
+
+
+
